# oe-musl-sdk-cmake

./: .gitignore  .gitmodules  Makefile  README.md  meta-clang-musl-cmake-fix.patch  toolchain-scripts-musl.patch
meta-fixes/conf/: layer.conf
meta-fixes/recipes-devtools/cmake/: cmake-native_%.bbappend
meta-project/conf/: layer.conf
meta-project/recipes-examples/myapp-cmake/: myapp-cmake-clang.bb  myapp-cmake.bb
myapp-cmake/: .gdbinit  .gitignore  CMakeLists.txt  myapp.c
